# name: test_attach_user_transform[uvloop-False]
  <class 'dict'> {
    '_id': 'bar',
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': '7CtBo2yG',
    },
  }
---
# name: test_attach_user_transform[uvloop-True]
  <class 'list'> [
    <class 'dict'> {
      '_id': 'bar',
      'user': <class 'dict'> {
        'administrator': False,
        'handle': 'leeashley',
        'id': '7CtBo2yG',
      },
    },
    <class 'dict'> {
      '_id': 'foo',
      'user': <class 'dict'> {
        'administrator': False,
        'handle': 'johnsoncynthia',
        'id': 'LB1U6zCj',
      },
    },
    <class 'dict'> {
      '_id': 'baz',
      'user': <class 'dict'> {
        'administrator': False,
        'handle': 'leeashley',
        'id': '7CtBo2yG',
      },
    },
  ]
---
# name: test_update_sessions_and_keys[uvloop-False-False-False]
  <class 'dict'> {
    '_id': 'foobar',
    'administrator': False,
    'groups': <class 'list'> [
      'peasants',
      'kings',
    ],
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_update_sessions_and_keys[uvloop-False-False-False].1
  <class 'dict'> {
    '_id': 'foobar',
    'administrator': False,
    'groups': <class 'list'> [
      'peasants',
      'kings',
    ],
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_update_sessions_and_keys[uvloop-False-False-True]
  <class 'dict'> {
    '_id': 'foobar',
    'administrator': True,
    'groups': <class 'list'> [
      'peasants',
      'kings',
    ],
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_update_sessions_and_keys[uvloop-False-False-True].1
  <class 'dict'> {
    '_id': 'foobar',
    'administrator': True,
    'groups': <class 'list'> [
      'peasants',
      'kings',
    ],
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_update_sessions_and_keys[uvloop-False-True-False]
  <class 'dict'> {
    '_id': 'foobar',
    'administrator': False,
    'groups': <class 'list'> [
      'peasants',
      'kings',
    ],
    'permissions': <class 'dict'> {
      'cancel_job': True,
      'create_ref': True,
      'create_sample': True,
      'modify_hmm': True,
      'modify_subtraction': True,
      'remove_file': True,
      'remove_job': True,
      'upload_file': True,
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_update_sessions_and_keys[uvloop-False-True-False].1
  <class 'dict'> {
    '_id': 'foobar',
    'administrator': False,
    'groups': <class 'list'> [
      'peasants',
      'kings',
    ],
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_update_sessions_and_keys[uvloop-False-True-True]
  <class 'dict'> {
    '_id': 'foobar',
    'administrator': True,
    'groups': <class 'list'> [
      'peasants',
      'kings',
    ],
    'permissions': <class 'dict'> {
      'cancel_job': True,
      'create_ref': True,
      'create_sample': True,
      'modify_hmm': True,
      'modify_subtraction': True,
      'remove_file': True,
      'remove_job': True,
      'upload_file': True,
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_update_sessions_and_keys[uvloop-False-True-True].1
  <class 'dict'> {
    '_id': 'foobar',
    'administrator': True,
    'groups': <class 'list'> [
      'peasants',
      'kings',
    ],
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_update_sessions_and_keys[uvloop-True-False-False]
  <class 'dict'> {
    '_id': 'foobar',
    'administrator': False,
    'groups': <class 'list'> [
      'peasants',
      'kings',
    ],
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_update_sessions_and_keys[uvloop-True-False-False].1
  <class 'dict'> {
    '_id': 'foobar',
    'administrator': False,
    'groups': <class 'list'> [
      'peasants',
      'kings',
    ],
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_update_sessions_and_keys[uvloop-True-False-True]
  <class 'dict'> {
    '_id': 'foobar',
    'administrator': True,
    'groups': <class 'list'> [
      'peasants',
      'kings',
    ],
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_update_sessions_and_keys[uvloop-True-False-True].1
  <class 'dict'> {
    '_id': 'foobar',
    'administrator': True,
    'groups': <class 'list'> [
      'peasants',
      'kings',
    ],
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_update_sessions_and_keys[uvloop-True-True-False]
  <class 'dict'> {
    '_id': 'foobar',
    'administrator': False,
    'groups': <class 'list'> [
      'peasants',
      'kings',
    ],
    'permissions': <class 'dict'> {
      'cancel_job': True,
      'create_ref': True,
      'create_sample': True,
      'modify_hmm': True,
      'modify_subtraction': True,
      'remove_file': True,
      'remove_job': True,
      'upload_file': True,
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_update_sessions_and_keys[uvloop-True-True-False].1
  <class 'dict'> {
    '_id': 'foobar',
    'administrator': False,
    'groups': <class 'list'> [
      'peasants',
      'kings',
    ],
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_update_sessions_and_keys[uvloop-True-True-True]
  <class 'dict'> {
    '_id': 'foobar',
    'administrator': True,
    'groups': <class 'list'> [
      'peasants',
      'kings',
    ],
    'permissions': <class 'dict'> {
      'cancel_job': True,
      'create_ref': True,
      'create_sample': True,
      'modify_hmm': True,
      'modify_subtraction': True,
      'remove_file': True,
      'remove_job': True,
      'upload_file': True,
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
# name: test_update_sessions_and_keys[uvloop-True-True-True].1
  <class 'dict'> {
    '_id': 'foobar',
    'administrator': True,
    'groups': <class 'list'> [
      'peasants',
      'kings',
    ],
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'user': <class 'dict'> {
      'id': 'bob',
    },
  }
---
